# Solving-Large-Linear-System

./: CMakeLists.txt  README.html  README.md
data/: mydata.txt
example/: main_verification.c
include/: CMakeLists.txt  for_you_to_do.h  lu_functions.h  lu_test.h  util.h
script/: submit.sh
src/: CMakeLists.txt  block_lu.c  for_you_to_do.c  lapack_lu.c  naive_lu.c  util.c
test/: CMakeLists.txt  verification.c
